add show assembly options