@@ -8,16 +8,39 @@
     <artifactId>lock-free-queue</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-     <dependencies>
-         <dependency>
-             <groupId>junit</groupId>
-             <artifactId>junit</artifactId>
-             <version>4.11</version>
-         </dependency>
-         <dependency>
-             <groupId>org.slf4j</groupId>
-             <artifactId>slf4j-log4j12</artifactId>
-     <version>1.7.5     </version>
-         </dependency>
-     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <forkMode>always</forkMode>
+                    <argLine>-Xmx512M</argLine>
+                    <!--<argLine>-XX:+AggressiveOpts</argLine>-->
+                    <argLine>-XX:+UnlockDiagnosticVMOptions</argLine>
+                    <!--<argLine>-XX:+UnlockExperimentalVMOptions</argLine>-->
+                    <argLine>-XX:+PrintAssembly</argLine>
+                    <!--<argLine>-XX:PrintAssemblyOptions=hsdis-print-bytes</argLine>-->
+                    <!--<argLine>-XX:CompileCommand=print,*LockFreeQueue.*</argLine>-->
+                    <!--<argLine>-XX:+PrintCompilation</argLine>-->
+                    <!--<argLine>-XX:+PrintAssemblyOptions</argLine>-->
+                    <!--<argLine>-XX:+PrintFlagsFinal</argLine>-->
+                    <!--<argLine>-XX:+DebugNonSafepoints</argLine>-->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+    </dependencies>
 </project>
